<resources>
    <string name="app_name">GMF</string>
    <string name="action_login">Log In</string>
    <string name="activity_email">Email</string>
    <string name="activity_passowrd">Password</string>
    <string name="activity_login">Log In</string>
    <string name="activity_signin">Don\'t have account ? Sign Up</string>
    <string name="activity_register">Register</string>
    <string name="activity_mobile_number">Mobile Number</string>
    <string name="activity_first_name">First Name</string>
    <string name="activity_last_name">Last Name</string>
    <string name="activity_information">Medicine Information</string>
    <string name="title_activity_map">Store Locator</string>
    <string name="gms_jas">Generic Medical Store</string>
    <string name="title_activity_view_direction">Store Direction</string>
    <string name="activity_storeInforamtion">Store Information</string>
    <string name="action_edit">edit</string>
    <string name="str_btn_cancel">Cancel</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="pill_name">Please insert pill name</string>
    <string name="Monday">Mon</string>
    <string name="Tuesday">Tue</string>
    <string name="Wednesday">Wed</string>
    <string name="Thursday">Thu</string>
    <string name="Friday">Fri</string>
    <string name="Saturday">Sat</string>
    <string name="Sunday">Sun</string>
    <string name="pill_reminder">Pill Reminder</string>
    <string name="activity_add">Add Pill</string>
    <string name="activity_edit">Edit Pill</string>
    <string name="activity_pill_box">Pill Box</string>
    <string name="activity_alert">Alert</string>
    <string name="camera">Capture Photo</string>
    <string name="gallery">Select Photo</string>
    <string name="preview_description">Image preview will be appear here</string>
    <string name="activity_prescription">Upload Prescription</string>
    <string name="action_myProfile">My Profile</string>
    <string name="save">Save</string>
    <string name="activity_forgetPassword">Forget Password?</string>
    <string name="activity_submit">Submit</string>
</resources>
