<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#ffffff"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity_login">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_email"
        android:textColor="#64B5F6"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginBottom="8dp"
        />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textEmailAddress"
        android:maxLines="1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_passowrd"
        android:textColor="#64B5F6"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:maxLines="1"/>

    <TextView
        android:id="@+id/link_forgetPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/activity_forgetPassword"
        android:textColor="#64B5F6"
        android:gravity="center"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/activity_login"
        android:textAllCaps="true"
        android:onClick="loginButton"
        android:background="#00B0EA"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/link_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/activity_signin"
        android:textColor="#64B5F6"
        android:gravity="center"
        android:textSize="16sp"/>
</LinearLayout>
