<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".activity_forgetPassword">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_email"
        android:textColor="#64B5F6"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textEmailAddress"
        android:maxLines="1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activity_passowrd"
        android:layout_marginTop="8dp"
        android:textColor="#64B5F6"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:inputType="textPassword"
        android:maxLines="1" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/activity_submit"
        android:textAllCaps="true"
        android:onClick="submitButton"
        android:textColor="#ffffff"
        android:background="#00B0EA"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="20sp" />

</LinearLayout>
